@@ -1,3 +1,7 @@
+Jun 17, 2007 - chris
+o added the flag HAM_OPEN_EXCLUSIVE; will lock the file exclusively, as 
+    long as it's open. Returns HAM_WOULD_BLOCK if you try to place an
+    exclusive lock on a database which was already opened exclusively.
 
 Jun 15, 2007 - chris
 o fixed a bug which disabled HAM_DISABLE_MMAP; even if the flag was 
